reorganize scripts.data.utils. big commit. data is now ready and can analyze data w plots

--- a/Pipfile
+++ b/Pipfile
@@ -3,9 +3,19 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[scripts]
+fetch = "python3 ./scripts/fetch.py"
+td = "python3 ./scripts/transform_raw_data.py"
+p = "python3 ./scripts/plot_raw.py"
+ps = "python3 ./scripts/plot_nn_sets.py"
+
 [packages]
 pprintpp = "*"
 requests = "*"
+plotly = "==4.14.3"
+pandas = "*"
+finplot = "*"
+numpy = "*"
 
 [dev-packages]
 
